fix(map): global overflow and animals

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,6 +7,15 @@
 @import "themes/orange";
 @import "themes/green";
 
+html {
+  overflow: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
+}
+
 body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
